# what-to-eat

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
deployment/: what-to-eat-deployment.yaml
src/: main.rs
